# demand-radar

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7bf47582ffa5_initial.py
backend/app/: auth.py  config.py  database.py  http_client.py  keywords.json  main.py  scheduler.py
backend/app/models/: comment.py  daily_report.py  pain_point.py  pain_score.py  post.py
backend/app/repositories/: base.py  daily_report_repo.py  pain_point_repo.py  post_repo.py
backend/app/routers/: __init__.py  crawl.py  pain_points.py  posts.py  reports.py
backend/app/schemas/: __init__.py  pain_point.py  post.py  report.py
backend/app/services/: ai_analyzer.py  deduplicator.py  hn_crawler.py  pain_scorer.py  pipeline.py  reddit_crawler.py  report_generator.py
backend/tests/: conftest.py  test_pain_scorer.py
backend/tests/test_api/: test_posts.py
frontend/: Dockerfile  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/pain-points/[id]/: page.tsx
frontend/src/app/report/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/trends/: page.tsx
frontend/src/components/home/: StatsOverview.tsx  TriggerPanel.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: Badge.tsx  PainCard.tsx  SearchBar.tsx
frontend/src/hooks/: usePainPoints.ts  useSearch.ts
frontend/src/lib/: api.ts  utils.ts
